webook-mysql-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  selector:
    matchLabels:
      app: webook-mysql
  replicas: 1
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          # the volume path in the container
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      restartPolicy: Always
      # The volumes declaration
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            # PVC persistent volume claim
            claimName: webook-mysql-pvc

---
