wetravel-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetravel
spec:
  replicas: 3
  # Which pods to deploy?
  selector:
    # find the labels
    matchLabels:
      app: wetravel
  # template in Deployment means the template for pods
  template:
    metadata:
      # lables will be matched
      labels:
        # Must be the same as matchLabels
        app: wetravel
    # Pod spec
    spec:
      # Containers in Pods (Normally one container in one pod)
      containers:
      - name: wetravel
        image: vinchent123/wetravel:v0.0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 7779
