wetravel-mysql-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetravel-mysql
  labels:
    app: wetravel-mysql
spec:
  selector:
    matchLabels:
      app: wetravel-mysql
  replicas: 1
  template:
    metadata:
      name: wetravel-mysql
      labels:
        app: wetravel-mysql
    spec:
      containers:
        - name: wetravel-mysql
          image: mysql:9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          # the volume path in the container
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
            - mountPath: /docker-entrypoint-initdb.d/
              name: mysql-configmap
      restartPolicy: Always
      # The volumes declaration
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            # PVC persistent volume claim
            claimName: wetravel-mysql-pvc
        - name: mysql-configmap
          configMap:
            name: wetravel-mysql-configmap

---
