wetravel-redis-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetravel-redis
  labels:
    app: wetravel-redis
spec:
  selector:
    matchLabels:
      app: wetravel-redis
  replicas: 1
  template:
    metadata:
      name: wetravel-redis
      labels:
        app: wetravel-redis
    spec:
      containers:
        - name: wetravel-redis
          # image: bitnami/redis:latest
          image: redis:latest
          imagePullPolicy: IfNotPresent
          # env:
          #   - name: ALLOW_EMPTY_PASSWORD
          #     value: yes
          ports:
            - containerPort: 6379
      restartPolicy: Always
---
