wetravel-mysql-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: wetravel-mysql
  namespace: default
spec:
  selector:
    app: wetravel-mysql
  type: LoadBalancer
  ports:
  - name: wetravel-mysql
    protocol: TCP
    port: 3308
    targetPort: 3306
---
