wetravel-redis-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: wetravel-redis
  namespace: default
spec:
  selector:
    app: wetravel-redis
  type: NodePort
  ports:
  - name: wetravel-redis
    protocol: TCP
    # service accessible port
    port: 6380
    # Pod exposed port
    targetPort: 6379
    # External access (30000-32767)
    nodePort: 31379
---
